@@ -35,8 +35,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 
 import com.fasterxml.jackson.annotation.JsonAutoDetect.Visibility;
+import com.fasterxml.jackson.annotation.PropertyAccessor;
 import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.MapperFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.exc.UnrecognizedPropertyException;
 
@@ -237,8 +237,8 @@ public class AdditionalPropertiesIT {
         Method getter = classWithNoAdditionalProperties.getMethod("getAdditionalProperties");
         Method builderMethod = classWithNoAdditionalProperties.getMethod("withAdditionalProperty", String.class, String.class);
 
-        Object value = "value";
-        Object instance = classWithNoAdditionalProperties.newInstance();
+        String value = "value";
+        Object instance = classWithNoAdditionalProperties.getDeclaredConstructor().newInstance();
         Object result = builderMethod.invoke(instance, "prop", value);
         Object stored = ((Map<?, ?>) getter.invoke(instance)).get("prop");
 
@@ -249,9 +249,9 @@ public class AdditionalPropertiesIT {
 
     @Test
     public void additionalPropertiesWorkWithAllVisibility() throws ClassNotFoundException, SecurityException, IOException {
-        mapper.configure(MapperFeature.AUTO_DETECT_GETTERS, false);
-        mapper.configure(MapperFeature.AUTO_DETECT_SETTERS, false);
-        mapper.setVisibility(mapper.getVisibilityChecker().with(Visibility.ANY));
+        mapper.setVisibility(PropertyAccessor.ALL, Visibility.ANY);
+        mapper.setVisibility(PropertyAccessor.GETTER, Visibility.NONE);
+        mapper.setVisibility(PropertyAccessor.SETTER, Visibility.NONE);
 
         ClassLoader resultsClassLoader = schemaRule.generateAndCompile("/schema/additionalProperties/defaultAdditionalProperties.json", "com.example");
 
